<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:padding="24dp"
    android:layout_centerInParent="true"
    android:background="@drawable/bg_card_white">

        <LinearLayout
            android:id="@+id/layout_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:src="@mipmap/ic_launcher"
                tools:ignore="contentDescription"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/app_name" />

        </LinearLayout>

        <TextView
            android:id="@+id/welcome_message_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/layout_app_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/welcome_message_h1"/>

        <TextView
            android:id="@+id/welcome_message_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_message_h1"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/welcome_message_h2"/>

        <TextView
            android:id="@+id/welcome_message_h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_message_h2"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="@string/welcome_message_h3"/>


        <Button
            android:id="@+id/welcome_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:text="@string/welcome_confirm_button"/>

    </RelativeLayout>